--- a/requirements_dev_optional.txt
+++ b/requirements_dev_optional.txt
@@ -18,6 +18,12 @@ pytest-cov==2.7.1
 pytest-doctestplus==0.4.0
 pytest-remotedata==0.3.2
 h5py==2.10.0
-s3fs==0.5.0; python_version > '3.6'
 moto>=1.3.14; python_version > '3.6'
 flask
+s3fs==0.5.0; python_version > '3.6'
+# all async features in v3
+pytest-trio ; python_version >= '3.6'
+trio ; python_version >= '3.6'
+redio ; python_version >= '3.7' and sys_platform != 'win32'
+xarray ; python_version >= '3.8'
+netCDF4 ; python_version >= '3.8'
