--- a/codecov.yml
+++ b/codecov.yml
@@ -7,3 +7,9 @@ coverage:
     patch:
       default:
         target: 100
+comment:
+  layout: "diff, files"
+  behavior: default
+  require_changes: true  # if true: only post the comment if coverage changes
+  branches:               # branch names that can post comment
+    - "master"
