--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -21,11 +21,19 @@ jobs:
 
       - name: Install PyBuild
         run: |
-          python -m pip install build
+          python -m pip install 'build!=0.1' setuptools-scm
 
       - name: Build wheel and sdist
         run: |
           python -m build
+          git describe
+          pwd
+          if [ -f dist/zarr-0.0.0.tar.gz ]; then
+            echo "WRONG VERSION NUMBER"
+            exit 1
+          else
+            echo "All seem good"
+          fi
       - uses: actions/upload-artifact@v1
         with:
           name: releases
