--- a/requirements_dev_optional.txt
+++ b/requirements_dev_optional.txt
@@ -1,5 +1,5 @@
 # optional library requirements
-bsddb3==6.2.6; sys_platform != 'win32'
+# bsddb3==6.2.6; sys_platform != 'win32'
 lmdb==0.97; sys_platform != 'win32'
 # optional library requirements for Jupyter
 ipytree==0.1.3
@@ -15,7 +15,6 @@ coverage==5.0.3
 flake8==3.8.3
 pytest-cov==2.7.1
 pytest-doctestplus==0.4.0
-pytest-remotedata==0.3.2
 h5py==2.10.0
 s3fs==0.5.1; python_version > '3.6'
 fsspec==0.8.4; python_version > '3.6'
