--- a/requirements_dev_optional.txt
+++ b/requirements_dev_optional.txt
@@ -11,7 +11,7 @@ redis==3.3.8
 pymongo==3.9.0
 # optional test requirements
 tox==3.14.0
-coverage==5.0.3
+coverage
 flake8==3.8.3
 pytest-cov==2.7.1
 pytest-doctestplus==0.4.0
