Drop python 3.8 and numpy 1.20 (#1557)
* Drop 3.8 and add 3.12

* Try removing line_profiler

* Also bump the minimal numpy to 1.21

* Drop 3.12 again

* Revert "Try removing line_profiler"

This reverts commit 837854bec99a9d25aece2ead9666f01690d228cc.

* Update release.rst

---------

Co-authored-by: Joe Hamman <joe@earthmover.io>
Co-authored-by: jakirkham <jakirkham@gmail.com>

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,13 +15,13 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
-        numpy_version: ['>=1.22.0', '==1.20.*']
+        python-version: ['3.9', '3.10', '3.11']
+        numpy_version: ['>=1.22.0', '==1.21.*']
         exclude:
           - python-version: '3.10'
-            numpy_version: '==1.20.*'
+            numpy_version: '==1.21.*'
           - python-version: '3.11'
-            numpy_version: '==1.20.*'
+            numpy_version: '==1.21.*'
     services:
       redis:
         image: redis
